--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,79 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+// application.scss
+.invalid-feedback {
+  display: none;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: red;
+}
+
+.was-validated .form-control:invalid,
+.form-control.is-invalid,
+.was-validated .custom-select:invalid,
+.custom-select.is-invalid {
+  border-color: red;
+}
+
+.was-validated .form-control:invalid ~ .invalid-feedback,
+.was-validated .form-control:invalid ~ .invalid-tooltip,
+.form-control.is-invalid ~ .invalid-feedback,
+.form-control.is-invalid ~ .invalid-tooltip,
+.was-validated .custom-select:invalid ~ .invalid-feedback,
+.was-validated .custom-select:invalid ~ .invalid-tooltip,
+.custom-select.is-invalid ~ .invalid-feedback,
+.custom-select.is-invalid ~ .invalid-tooltip {
+  display: block;
+}
+
+
+.restaurant {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+  opacity: 0.8;
+  text-decoration: none;
+  &:hover {
+    opacity: 1;
+    text-decoration: none !important;
+  }
+}
+
+.container{
+  background-color: white;
+}
+
+.back-link {
+  // border-top: 1px solid lightgrey;
+  margin-top: 20px;
+}
+
+h1 {
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+li {
+  list-style: none;
+  display: inline;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+  &:hover {
+  text-decoration: none !important;
+  }
+}
+
+.fa-utensils:before {
+    content: "";
+    color: coral;
+}
